# AssetManager

./: .gitignore  Export for Unity.bat  Generate Thumbnails.bat  Open Gallery.bat  PLAN.md  README.md  Scan Library.bat  assetmanager.md  config.yaml  pyproject.toml
src/asset_manager/: cli.py  config.py  gallery.py  models.py  scanner.py  server.py  thumbnail.py  unity_export.py
tests/: test_models.py  test_scanner.py  test_unity_export.py
